fix compilation of LibAldor documenation

--- a/aldor/lib/aldor/doc/tex/guide.tex
+++ b/aldor/lib/aldor/doc/tex/guide.tex
@@ -15,11 +15,7 @@ Note that all the category names end with the word {\tt Type}.
 
 \begin{figure}[htb!]
 \begin{latexonly}
-\rotatebox{90}{
-\scalebox{.75}[.9]{
-\includegraphics{sallicat}
-}
-}
+\includegraphics[width=\textwidth]{sallicat}
 \end{latexonly}
 \begin{htmlonly}
 \includegraphics{sallicat}
@@ -73,11 +69,7 @@ data structures is shown in Figure~\ref{fig:data}.
 
 \begin{figure}[htb!]
 \begin{latexonly}
-\rotatebox{90}{
-\scalebox{.75}[.9]{
-\includegraphics{sallidata}
-}
-}
+\includegraphics[width=\textwidth]{sallidata}
 \end{latexonly}
 \begin{htmlonly}
 \includegraphics{sallidata}
