--- a/aldor/lib/aldor/doc/tex/alltypes.tex
+++ b/aldor/lib/aldor/doc/tex/alltypes.tex
@@ -1,72 +1,75 @@
 \altypes{Arithmetic}
-\input sal_int
-\input sal_arith
-\input sal_binpow
-\input sal_bool
-\input sal_complex
-\input sal_dfloat
-\input sal_fltcat
-\input sal_fltgmp
-\input sal_intgmp
-\input sal_segment
-\input sal_intcat
-\input sal_lincomb
-\input sal_mint
-\input sal_oarith
-\input sal_order
-\input sal_base
-\input sal_random
-\input sal_sfloat
-\input sal_torder
+\input{arith/sal_int}
+\input{arith/sal_arith}
+\input{arith/sal_binpow}
+\input{arith/sal_bool}
+\input{arith/sal_complex}
+\input{arith/sal_dfloat}
+\input{arith/sal_fltcat}
+\input{gmp/sal_fltgmp}
+\input{gmp/sal_intgmp}
+\input{arith/sal_segment}
+\input{arith/sal_intcat}
+\input{arith/sal_lincomb}
+\input{arith/sal_mint}
+\input{arith/sal_oarith}
+\input{base/sal_order}
+\input{base/sal_base}
+\input{arith/sal_random}
+\input{arith/sal_sfloat}
+\input{base/sal_torder}
+
 \altypes{Input/Output}
-\input sal_bstream
-\input sal_byte
-\input sal_char
-\input sal_file
-\input sal_itype
-\input sal_otype
-\input sal_serial
-\input sal_syntax
-\input sal_tstream
-\input sal_manip
+\input{base/sal_bstream}
+\input{base/sal_byte}
+\input{base/sal_char}
+\input{util/sal_file}
+\input{base/sal_itype}
+\input{base/sal_otype}
+\input{base/sal_serial}
+\input{base/sal_syntax}
+\input{base/sal_tstream}
+\input{base/sal_manip}
+
 \altypes{Data Structures}
-\input sal_array
-\input sal_bdata
-\input sal_bstruc
-\input sal_ckarray
-\input sal_cklist
-\input sal_ckmembk
-\input sal_data
-\input sal_ddata
-\input sal_fstruc
-\input ald_flags
-\input sal_hash
-\input sal_kntry
-\input sal_htype
-\input sal_lstruc
-\input sal_list
-\input sal_memblk
-\input sal_pkarray
-\input sal_parray
-\input sal_barray
-\input ald_queue
-\input sal_set
-\input sal_sortas
-\input sal_slist
-\input sal_sset
-\input sal_stream
-\input sal_string
-\input ald_symtab
-\input sal_table
+\input{datastruc/sal_array}
+\input{datastruc/sal_bdata}
+\input{datastruc/sal_bstruc}
+\input{datastruc/sal_ckarray}
+\input{datastruc/sal_cklist}
+\input{datastruc/sal_ckmembk}
+\input{datastruc/sal_data}
+\input{datastruc/sal_ddata}
+\input{datastruc/sal_fstruc}
+\input{datastruc/ald_flags}
+\input{datastruc/sal_hash}
+\input{datastruc/sal_kntry}
+\input{base/sal_htype}
+\input{datastruc/sal_lstruc}
+\input{datastruc/sal_list}
+\input{datastruc/sal_memblk}
+\input{datastruc/sal_pkarray}
+\input{datastruc/sal_parray}
+\input{datastruc/sal_barray}
+\input{datastruc/ald_queue}
+\input{datastruc/sal_set}
+\input{datastruc/sal_sortas}
+\input{datastruc/sal_slist}
+\input{datastruc/sal_sset}
+\input{datastruc/sal_stream}
+\input{datastruc/sal_string}
+\input{datastruc/ald_symtab}
+\input{datastruc/sal_table}
+
 \altypes{Utilities}
-\input sal_version
-\input sal_bsearch
-\input sal_cmdline
-\input sal_copy
-\input sal_gener
-\input sal_partial
-\input ald_pfunc
-\input sal_pointer
-\input ald_symbol
-\input sal_timer
-\input ald_trace
+\input{util/sal_version}
+\input{arith/sal_bsearch}
+\input{util/sal_cmdline}
+\input{base/sal_copy}
+\input{base/sal_gener}
+\input{base/sal_partial}
+\input{base/ald_pfunc}
+\input{arith/sal_pointer}
+\input{datastruc/ald_symbol}
+\input{util/sal_timer}
+\input{util/ald_trace}
