fix compilation of LibAlgebra documentation

--- a/aldor/lib/algebra/doc/tex/alltypes.tex
+++ b/aldor/lib/algebra/doc/tex/alltypes.tex
@@ -1,202 +1,202 @@
 \altypes{Basic Categories}
-\input sit_abgroup
-\input sit_abmon
-\input sit_algebra
-\input sit_char0
-\input sit_comring
-\input sit_dcmprng
-\input sit_diffext
-\input sit_difring
-\input sit_euclid
-\input sit_field
-\input sit_charp
-\input sit_fset
-\input sit_freealg
-\input sit_freelar
-\input sit_freelc
-\input sit_freemod
-\input alg_frering
-\input sit_gcd
-\input sit_group
-\input sit_idxfalg
-\input sit_idxflar
-\input sit_idxflc
-\input sit_idxfmod
-\input alg_idxfrng
-\input sit_integer
-\input sit_intdom
-\input sit_linarit
-\input sit_module
-\input sit_monoid
-\input sit_ncid
-\input sit_ring
-\input sit_qring
-\input alg_rring
-\input sit_spzble
-\input sit_basic
+\input{categories/sit_abgroup}
+\input{categories/sit_abmon}
+\input{categories/sit_algebra}
+\input{categories/sit_char0}
+\input{categories/sit_comring}
+\input{categories/sit_dcmprng}
+\input{categories/sit_diffext}
+\input{categories/sit_difring}
+\input{categories/sit_euclid}
+\input{categories/sit_field}
+\input{categories/sit_charp}
+\input{categories/sit_fset}
+\input{categories/sit_freealg}
+\input{categories/sit_freelar}
+\input{categories/sit_freelc}
+\input{categories/sit_freemod}
+\input{categories/alg_frering}
+\input{categories/sit_gcd}
+\input{categories/sit_group}
+\input{categories/sit_idxfalg}
+\input{categories/sit_idxflar}
+\input{categories/sit_idxflc}
+\input{categories/sit_idxfmod}
+\input{categories/alg_idxfrng}
+\input{categories/sit_integer}
+\input{categories/sit_intdom}
+\input{categories/sit_linarit}
+\input{categories/sit_module}
+\input{categories/sit_monoid}
+\input{categories/sit_ncid}
+\input{categories/sit_ring}
+\input{categories/sit_qring}
+\input{categories/alg_rring}
+\input{categories/sit_spzble}
+\input{categories/sit_basic}
 
 \altypes{Commutative Algebra}
-\input sit_automor
-\input alg_cansimp
-\input sit_chrem
-\input sit_complex
-\input sit_deriv
-\input sit_qotient
-\input sit_froot
-\input sit_quotby
-\input sit_qotbyct
-\input sit_qotbyc0
-\input sit_quotcat
-\input sit_qotfcat
-\input sit_qotfct0
-\input sit_lcqotct
-\input alg_modcmp 
-\input sit_product
-\input alg_rescls
-\input sit_saexcpt
-\input sit_sae
-\input alg_primsrc
-\input sit_upmod
-\input sit_algext
+\input{categories/sit_automor}
+\input{categories/alg_cansimp}
+\input{categories/sit_chrem}
+\input{basic/sit_complex}
+\input{categories/sit_deriv}
+\input{fraction/sit_qotient}
+\input{univpoly/categories/sit_froot}
+\input{fraction/sit_quotby}
+\input{fraction/sit_qotbyct}
+\input{fraction/sit_qotbyc0}
+\input{fraction/sit_quotcat}
+\input{fraction/sit_qotfcat}
+\input{fraction/sit_qotfct0}
+\input{fraction/sit_lcqotct}
+\input{categories/alg_modcmp}
+\input{basic/sit_product}
+\input{categories/alg_rescls}
+\input{algext/sit_saexcpt}
+\input{algext/sit_sae}
+\input{categories/alg_primsrc}
+\input{algext/sit_upmod}
+\input{algext/sit_algext}
 
 \altypes{Finite Fields}
-\input sit_primgen
-\input sit_prmtabl
-\input alg_pf2
-\input sit_prfcat
-\input sit_prfcat0
-\input sit_prmroot
-\input sit_power
-\input sit_spf
-\input sit_spf0
-\input sit_sprfcat
-\input sit_spfcat0
-\input sit_zpf
+\input{numbers/sit_primgen}
+\input{numbers/sit_prmtabl}
+\input{ffield/alg_pf2}
+\input{ffield/sit_prfcat}
+\input{categories/sit_prfcat0}
+\input{numbers/sit_prmroot}
+\input{categories/sit_power}
+\input{ffield/sit_spf}
+\input{categories/sit_spf0}
+\input{ffield/sit_sprfcat}
+\input{categories/sit_spfcat0}
+\input{ffield/sit_zpf}
 
 \altypes{Linear Algebra}
-\input sit_bsolve
-\input sit_dnsemat
-\input sit_dfge
-\input sit_ffge
-\input sit_hermge
-\input sit_linalg
-\input sit_laring
-\input sit_linelim
-\input sit_matcat
-\input sit_matquot
-\input sit_modpoge
-\input sit_oge
-\input sit_overdet
-\input sit_speclin
-\input sit_ff2ge
-\input sit_upcrtla
-\input sit_popov
-\input sit_vector
-\input sit_vecquot
+\input{mat/linalg/sit_bsolve}
+\input{mat/sit_dnsemat}
+\input{mat/gauss/sit_dfge}
+\input{mat/gauss/sit_ffge}
+\input{mat/gauss/sit_hermge}
+\input{mat/linalg/sit_linalg}
+\input{mat/linalg/sit_laring}
+\input{mat/gauss/sit_linelim}
+\input{mat/sit_matcat}
+\input{fraction/sit_matquot}
+\input{mat/modular/sit_modpoge}
+\input{mat/gauss/sit_oge}
+\input{mat/linalg/sit_overdet}
+\input{mat/modular/compbug/sit_speclin}
+\input{mat/gauss/sit_ff2ge}
+\input{mat/linalg2/sit_upcrtla}
+\input{mat/linalg2/sit_popov}
+\input{mat/sit_vector}
+\input{fraction/sit_vecquot}
 
 \altypes{Univariate Polynomials and Series}
-\input sit_dup
-\input sit_duts
-\input sit_fring
-\input sit_fftring
-\input alg_modgcdp
-\input sit_heugcd
-\input sit_modgcd
-\input sit_modpgcd
-\input sit_upfactp
-\input sit_zring
-\input sit_resprs
-\input alg_sup0
-\input alg_sup1
-\input alg_sup
-\input sit_ufacpol
-\input sit_ufalg
-\input sit_uffalg
-\input sit_uflgqot
-\input sit_ugring
-\input sit_zfactor
-\input sit_umonom
-\input sit_upolc
-\input sit_polkara
-\input sit_upolalg
-\input sit_sqfree
-\input sit_sercat
-\input alg_serpoly
+\input{univpoly/sit_dup}
+\input{series/compbug/sit_duts}
+\input{univpoly/categories/sit_fring}
+\input{univpoly/categories/sit_fftring}
+\input{univpoly/categories/alg_modgcdp}
+\input{univpoly/gcd/sit_heugcd}
+\input{univpoly/gcd/sit_modgcd}
+\input{univpoly/gcd/sit_modpgcd}
+\input{polyfactorp/sit_upfactp}
+\input{univpoly/categories/sit_zring}
+\input{univpoly/categories/sit_resprs}
+\input{univpoly/alg_sup0}
+\input{univpoly/alg_sup1}
+\input{univpoly/alg_sup}
+\input{univpoly/sit_ufacpol}
+\input{univpoly/categories/sit_ufalg}
+\input{univpoly/categories/sit_uffalg}
+\input{fraction/sit_uflgqot}
+\input{univpoly/categories/sit_ugring}
+\input{polyfactor0/sit_zfactor}
+\input{univpoly/categories/sit_umonom}
+\input{univpoly/sit_upolc}
+\input{univpoly/sit_polkara}
+\input{univpoly/categories/sit_upolalg}
+\input{univpoly/categories/sit_sqfree}
+\input{series/sit_sercat}
+\input{series/alg_serpoly}
 
 \altypes{Multivariate Polynomials}
-\input alg_bivarpk
-\input sm_dirprod
-\input sm_dirprodc
-\input sm_dmp0
-\input sm_dmp1
-\input sm_expocat
-\input sm_famr0
-\input sm_fvt
-\input sit_gexpcat
-\input sm_zevc
-\input sm_rmpz
-\input sm_midl
-\input sm_midrl
-\input sm_mievc
-\input sm_milex
-\input sm_osymbol
-\input sm_listovar
-\input sm_tuplovar
-\input sm_polring
-\input sm_polring0
-\input alg_poltype
-\input sm_rmp
-\input sm_rmpcat0
-\input alg_ZpUVres.tex
-\input sm_rmpzx
-\input alg_smp
-\input alg_stdfrng
-\input sm_vt
+\input{multpoly/multpolypkg/alg_bivarpk}
+\input{multpoly/exponent/sm_dirprod}
+\input{multpoly/exponent/sm_dirprodc}
+\input{multpoly/multpolydom/sm_dmp0}
+\input{multpoly/multpolydom/sm_dmp1}
+\input{multpoly/exponent/sm_expocat}
+\input{multpoly/multpolycat/sm_famr0}
+\input{multpoly/exponent/sm_fvt}
+\input{categories/sit_gexpcat}
+\input{multpoly/exponent/sm_zevc}
+\input{multpoly/multpolydom/sm_rmpz}
+\input{multpoly/exponent/sm_midl}
+\input{multpoly/exponent/sm_midrl}
+\input{multpoly/exponent/sm_mievc}
+\input{multpoly/exponent/sm_milex}
+\input{multpoly/exponent/sm_osymbol}
+\input{multpoly/exponent/sm_listovar}
+\input{multpoly/exponent/sm_tuplovar}
+\input{multpoly/multpolycat/sm_polring}
+\input{multpoly/multpolycat/sm_polring0}
+\input{multpoly/multpolycat/alg_poltype}
+\input{multpoly/multpolydom/sm_rmp}
+\input{multpoly/multpolycat/sm_rmpcat0}
+\input{multpoly/multpolypkg/alg_ZpUVres}
+\input{multpoly/multpolydom/sm_rmpzx}
+\input{multpoly/multpolydom/alg_smp}
+\input{multpoly/multpolycat/alg_stdfrng}
+\input{multpoly/exponent/sm_vt}
 
 \altypes{Expression Trees}
-\input sit_extree
-\input sit_OPand
-\input sit_OPassgn
-\input sit_OPbigO
-\input sit_OPcase
-\input sit_OPcplex
-\input sit_OPequal
-\input sit_OPexpt
-\input sit_OPfact
-\input sit_OPmore
-\input sit_OPif
-\input alg_leaf
-\input sit_OPless
-\input sit_OPllist
-\input sit_OPlist
-\input sit_OPmatrx
-\input sit_OPminus
-\input sit_OPnoteq
-\input alg_op
-\input sit_optools
-\input sit_OPplus
-\input sit_OPprefx
-\input sit_OPquot
-\input sit_OPsubsc
-\input sit_OPtimes
-\input sit_OPvect
+\input{extree/sit_extree}
+\input{extree/operators/sit_OPand}
+\input{extree/operators/sit_OPassgn}
+\input{extree/operators/sit_OPbigO}
+\input{extree/operators/sit_OPcase}
+\input{extree/operators/sit_OPcplex}
+\input{extree/operators/sit_OPequal}
+\input{extree/operators/sit_OPexpt}
+\input{extree/operators/sit_OPfact}
+\input{extree/operators/sit_OPmore}
+\input{extree/operators/sit_OPif}
+\input{extree/alg_leaf}
+\input{extree/operators/sit_OPless}
+\input{extree/operators/sit_OPllist}
+\input{extree/operators/sit_OPlist}
+\input{extree/operators/sit_OPmatrx}
+\input{extree/operators/sit_OPminus}
+\input{extree/operators/sit_OPnoteq}
+\input{extree/alg_op}
+\input{extree/sit_optools}
+\input{extree/operators/sit_OPplus}
+\input{extree/operators/sit_OPprefx}
+\input{extree/operators/sit_OPquot}
+\input{extree/operators/sit_OPsubsc}
+\input{extree/operators/sit_OPtimes}
+\input{extree/operators/sit_OPvect}
 
 \altypes{Shells}
-\input sit_interp
-\input sit_infexpr
-\input sit_lspexpr
-\input sit_mkpring
-\input sit_maple
-\input sit_pable
-\input sit_parser
-\input sit_ptools
-\input sit_pring
-\input sit_scanner
-\input sit_shell
-\input sit_token
+\input{basic/compbug/sit_interp}
+\input{extree/parser/sit_infexpr}
+\input{extree/parser/sit_lspexpr}
+\input{basic/sit_mkpring}
+\input{extree/parser/sit_maple}
+\input{categories/sit_pable}
+\input{extree/parser/sit_parser}
+\input{categories/sit_ptools}
+\input{basic/sit_pring}
+\input{extree/parser/sit_scanner}
+\input{basic/compbug/sit_shell}
+\input{extree/parser/sit_token}
 
 \altypes{Utilities}
-\input alg_version
-\input sit_indvar
-\input sit_permut
-\input sit_seqence
+\input{util/alg_version}
+\input{basic/sit_indvar}
+\input{basic/sit_permut}
+\input{series/sit_seqence}
