--- a/aldor/lib/algebra/doc/tex/macros.tex
+++ b/aldor/lib/algebra/doc/tex/macros.tex
@@ -1,17 +1,13 @@
-\newcommand{\bslash}{$\backslash$}
 \newcommand{\Th}[1]{$#1^{{\rm th}}$}
 \newcommand{\nodiv}{\not\vert~~}
 \newcommand{\abs}[1]{| #1 |}
 \newcommand{\true}{{\it true}\xspace}
 \newcommand{\false}{{\it false}\xspace}
 \newcommand{\failed}{{\it failed}\xspace}
-\newcommand{\asharp}{$A^{\#}$}
-%\newcommand{\extpow}[2]{\bigwedge^{#2} #1}
-\newcommand{\gpoch}[4]{{#1}^{\overline{#2,#3,#4}}}
+\newcommand{\asharp}{\aldor}
 \newcommand{\ZZ}{{\mathbbm Z}}
 \newcommand{\QQ}{{\mathbbm Q}}
 \newcommand{\builtin}[1]{\albuiltin{#1}}
-\newcommand{\basicmath}{{\tt BasicMath}\xspace}
 \newcommand{\aldor}{{\sc Aldor}\xspace}
 \newcommand{\libalgebra}{{\tt Algebra}\xspace}
 \newcommand{\stdmath}{\libalgebra}
@@ -25,16 +21,3 @@
 \newcommand{\st}{\mbox{ such that }}
 \newcommand{\paren}[1]{{\left({#1}\right)}}
 \newcommand{\maple}{{\sc Maple}\xspace}
-
-\def\altilde{\ensuremath{\sim}}
-\def\alcaret{\ensuremath{\land}}
-
-\newcommand{\alhtmltarget}[2]{\label{#1:#2}{} \index{#2!#1}}
-\newcommand{\nsignature}[3]{\alsignature{#1}{{#2} $\to$ {#3}}}
-\newenvironment{exports0}[1][]{%
-    \pagebreak[2]
-    \par\medskip\begin{list}{}{}
-    \item{} #1 \vspace{-1ex}\nopagebreak
-    \item{} \begin{tabular}{lll}
-  }%
-  {\end{tabular}\end{list}\smallskip}
